[project]
name = "digi-handboek"
dynamic = ["version"]
description = "In het Digi Handboek vind je handige informatie over hoe zaken bij het Digi Gilde zijn geregeld."
requires-python = ">=3.12"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-glightbox==0.5.1",
    "mkdocs-material[imaging]==9.6.22",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
]
