[project]
name = "digi-handboek"
dynamic = ["version"]
description = "In het Digi Handboek vind je handige informatie over hoe zaken bij het Digi Gilde zijn geregeld."
requires-python = ">=3.12"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-material[imaging]==9.7.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.0",
]
